--- a/CSS/flex布局/8控制弹性元素溢出换行处理.html
+++ b/CSS/flex布局/8控制弹性元素溢出换行处理.html
@@ -16,17 +16,28 @@
       }
       article {
         border: burlywood 1px solid;
-        width: 500px;
+        width: 447px;
         display: flex;
+        /*
         flex-direction: column;
+        flex-wrap: wrap;
+       */
+        /* 可以写成一句：*/
+        flex-direction: row;
+        justify-content: center; /*主轴元素的排练方式*/
+        height: 280px;
+        /*align-items: flex-end; 交叉轴的排列方式*/
+        align-items: stretch; /*如果子元素有height属性 那么stretch 是不起租用的*/
       }
       article * {
         width: 100px;
-        margin: 10px;
         height: 100px;
         font-size: 26px;
         border-radius: 0px;
         background: #61bdb2;
+        padding: 10px;
+        background-clip: content-box; /*只让它从内容开始*/
+        box-sizing: border-box; /*内边距不会导致盒子的宽度变化*/
       }
     </style>
   </head>
