--- a/CSS/CSS3变形透视动画/用translate控制元素二维移动.html
+++ b/CSS/CSS3变形透视动画/用translate控制元素二维移动.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>用translate控制元素二维移动</title>
-</head>
-<body>
-      
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>用translate控制元素二维移动</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+      main {
+        position: absolute;
+        width: 400px; /*因为有了上面的box-sizing: border-box; 这里的width,height都还是包括border在内的*/
+        height: 400px;
+        border: 1px solid silver;
+        left: 50%;
+        margin-left: -200px;
+        margin-top: -200px;
+        top: 50%;
+      }
+      div {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        left: 50%;
+        /*若想要  position: absolute;元素居中，那么要通过 margin-left， margin-top移动它原来宽高的一半*/
+        margin-left: -100px;
+        margin-top: -100px;
+        top: 50%;
+      }
+      div:nth-child(1) {
+        background-color: #00c2d8;
+        transition: 1s;
+      }
+      div:nth-child(2) {
+        background-color: #93ef8d;
+        transition: 1s;
+      }
+      main:hover div:nth-child(2) {
+        transform: translateY(100px);
+      }
+      main:hover div:nth-child(1) {
+        /*transform: translateX(-10%) translateY(-100px); 支持xy轴同时移动*/
+        transform: translate(-10%, -100px); /*支持xy轴同时移动*/
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div>
+        transform:
+        translateX(100px);正数是往右移动。百分数是按照原来的尺寸。100%=原本的width
+        注意z轴不可使用%
+      </div>
+      <div>
+        transform: translateY(100px);正数是往下移动。transition: 1s;变化持续一秒
+      </div>
+    </main>
+  </body>
 </html>
