--- a/CSS/CSS3变形透视动画/11 z轴缩放的使用.html
+++ b/CSS/CSS3变形透视动画/11 z轴缩放的使用.html
@@ -5,6 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>11 z轴缩放的使用</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+      main {
+        position: absolute;
+        width: 400px;
+        height: 400px;
+        border: 1px solid silver;
+        left: 50%;
+        margin-left: -200px;
+        margin-top: -200px;
+        top: 50%;
+        transform: perspective(903px) rotateY(45deg);
+        transform-style: preserve-3d;
+      }
+      div {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        left: 50%;
+        /*若想要  position: absolute;元素居中，那么要通过 margin-left， margin-top移动它原来宽高的一半*/
+        margin-left: -100px;
+        margin-top: -100px;
+        top: 50%;
+      }
+      div:nth-child(1) {
+        background-color: #00c2d8;
+        transition: 1s;
+      }
+      div:nth-child(2) {
+        background-color: #93ef8d;
+        transition: 1s;
+        transform: translateZ(-300px);
+      }
+      main:hover div:nth-child(2) {
+        /*transform: scaleX(0.2);在x方向缩小0.2倍*/
+        transform: scale(0.2, 2); /*在x方向缩小0.2倍 在y方向放大2倍*/
+      }
+      main:hover div:nth-child(1) {
+        /*transform: translateX(-10%) translateY(-100px); 支持xy轴同时移动*/
+        /* transform: translate(-10%, -100px); 支持xy轴同时移动*/
+      }
+      body {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div>
+        transform:
+        translateX(100px);正数是往右移动。百分数是按照原来的尺寸。100%=原本的width
+        注意z轴不可使用%
+      </div>
+      <div>
+        transform: translateY(100px);正数是往下移动。transition: 1s;变化持续一秒
+      </div>
+    </main>
+  </body>
 </html>
