--- a/CSS/CSS3变形透视动画/移动端视图切换.html
+++ b/CSS/CSS3变形透视动画/移动端视图切换.html
@@ -99,7 +99,7 @@
       </div>
     </main>
     <nav>
-      <a href="#home">home</a>
+      <a href="#home">Home</a>
       <a href="#video">video</a>
       <a href="#my">My</a>
     </nav>
