--- a/CSS/CSS3变形透视动画/11 z轴缩放的使用.html
+++ b/CSS/CSS3变形透视动画/11 z轴缩放的使用.html
@@ -45,7 +45,7 @@
       }
       main:hover div:nth-child(2) {
         /*transform: scaleX(0.2);在x方向缩小0.2倍*/
-        transform: scale(0.2, 2); /*在x方向缩小0.2倍 在y方向放大2倍*/
+        /* transform: scale(0.2, 2);在x方向缩小0.2倍 在y方向放大2倍*/
       }
       main:hover div:nth-child(1) {
         /*transform: translateX(-10%) translateY(-100px); 支持xy轴同时移动*/
