--- a/CSS/CSS3变形透视动画/14图集效果案例.html
+++ b/CSS/CSS3变形透视动画/14图集效果案例.html
@@ -6,5 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>14图集效果案例</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div></div>
+      <div></div>
+      <div></div>
+    </main>
+  </body>
 </html>
