--- a/CSS/CSS3变形透视动画/14图集效果案例.html
+++ b/CSS/CSS3变形透视动画/14图集效果案例.html
@@ -5,12 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>14图集效果案例</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+      }
+      body {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      /* main:hover div {
+        transform: scale(0.6);
+        filter: blur(4px);
+      }
+      main:hover div:hover {
+        transform: scale(1.6);
+        filter: none;
+      }*/
+      div {
+        transition: 2s;
+        width: 200px;
+        height: 200px;
+        margin-right: 20px;
+        overflow: hidden;
+      }
+      div > img {
+        filter: blur(4px);
+        height: 100%;
+        transition: 1s;
+      }
+      div > img:hover {
+        filter: none;
+        transform: scale(1.3);
+      }
+    </style>
   </head>
   <body>
     <main>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div>
+        <img
+          src="/Users/sruan006/Desktop/ava/AvaLearnFrontEnd/image/Desktop.jpeg"
+        />
+      </div>
+      <div>
+        <img
+          src="/Users/sruan006/Desktop/ava/AvaLearnFrontEnd/image/yooA.jpg"
+        />
+      </div>
+      <div>
+        <img
+          src="/Users/sruan006/Desktop/ava/AvaLearnFrontEnd/image/bonVoyage.jpg"
+        />
+      </div>
     </main>
   </body>
 </html>
