26 3d新年贺卡的制作

--- a/CSS/CSS3变形透视动画/26 3d新年贺卡的制作.html
+++ b/CSS/CSS3变形透视动画/26 3d新年贺卡的制作.html
@@ -47,6 +47,8 @@
         justify-content: flex-end;
         align-items: center;
         transform-origin: left;
+        border-right: solid 2px #f6e0e4;
+        box-sizing: border-box; /*尺寸包含了边框宽度*/
       }
       .card:hover::before {
         transform: rotateY(-180deg);
@@ -62,6 +64,8 @@
         justify-content: flex-start;
         align-items: center;
         transform-origin: right;
+        border-left: solid 2px #f6e0e4;
+        box-sizing: border-box; /*尺寸包含了边框宽度*/
       }
     </style>
   </head>
