--- a/CSS/CSS3变形透视动画/29 tranform-orgin动态旋转菜单.html
+++ b/CSS/CSS3变形透视动画/29 tranform-orgin动态旋转菜单.html
@@ -19,12 +19,18 @@
         background-color: #798897;
       }
       ul {
-        list-style: none;
         width: 300px;
         height: 300px;
-        background-color: #000;
+
+        left: 50%;
+        top: 50%;
+        border: 2px solid #ddd;
+        position: absolute;
+
+        transform: translate(-50%, -50%);
       }
       li {
+        list-style: none;
         width: 80px;
         height: 80px;
         background-color: #d16ba5;
@@ -65,10 +71,24 @@
       ul:hover li:nth-child(9) {
         transform: rotate(320deg);
       }
+      ul:hover li:nth-child(10) {
+        transform: rotate(360deg);
+      }
+      nav {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        background-color: #d16ba5;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     </style>
   </head>
   <body>
     <nav>
+      <i>Menu</i>
       <ul>
         <li>1</li>
         <li>2</li>
@@ -79,6 +99,7 @@
         <li>7</li>
         <li>8</li>
         <li>9</li>
+        <li>10</li>
       </ul>
     </nav>
   </body>
