--- a/第十章--对象/2属性的基本操作方法.html
+++ b/第十章--对象/2属性的基本操作方法.html
@@ -19,7 +19,7 @@
       console.log('======用for in遍历对象属性=====')
       for (const key in user) {
         console.log('key', key)
-        console.log('key', user[key])
+        console.log('user[key]', user[key])
       }
       console.log('======给对象添加属性=====')
       user.age = 19
