--- a/第十章--对象/9解构默认值实现配置项合并.html
+++ b/第十章--对象/9解构默认值实现配置项合并.html
@@ -25,7 +25,7 @@
         mydiv.style.backgroundColor = backgroundColor
         document.body.appendChild(mydiv)
       }
-      createElement({ width: 400 })
+      createElement({ width: 400, backgroundColor: '#FBEAFF' })
     </script>
   </body>
 </html>
