11对象属性的添加删除操作

--- a/第十章--对象/11对象属性的添加删除操作.html
+++ b/第十章--对象/11对象属性的添加删除操作.html
@@ -15,7 +15,8 @@
       /**
       delete hd.name
       console.log('delete hd.name', hd)
-      删除对象的属性**/
+      删除对象的属性
+      **/
       console.log(
         hd.hasOwnProperty('name'),
       ) /*hasOwnProperty检查hd本身是否存在该属性，不会去它的原型链上查找*/
