--- a/第十章--对象/15对象的浅拷贝.html
+++ b/第十章--对象/15对象的浅拷贝.html
@@ -7,9 +7,13 @@
     <title>15对象的浅拷贝</title>
   </head>
   <body>
+    <div>
+      不能把深层次的对象进行复制，比方说 let hd = { name: 'ava', url:
+      'www.baidu.com', mark: {num:999}} 就不可以
+    </div>
     <script>
       console.log('-----------不相互影响的赋值-----------')
-      let hd = { name: 'ava', url: 'www.baidu.com' }
+      let hd = { name: 'ava', url: 'www.baidu.com', mark: 'home' }
       let cms = {
         name: hd.name,
       }
@@ -19,12 +23,29 @@
       cms.name = 'rst'
       console.log(hd, cms)
       let obj = {}
-      console.log('-----------使用for in来赋值-----------')
+      console.log(
+        '-----------赋值方式1.使用for in来赋值，赋值过程中需要有改变-----------',
+      )
       for (const key in hd) {
-        obj[key] = hd[key]
+        obj[key] = hd[key] + '--name'
       }
       obj.name = 'aho'
       console.log(obj)
+      console.log(
+        '-----------赋值方式2.使用for in来赋值，多对象合并赋值可以用这个-----------',
+      )
+      let objNew = Object.assign({}, hd)
+      console.log('🚀 ~ file: 15对象的浅拷贝.html~ objNew', objNew)
+      objNew.name = 'Tom'
+      console.log('🚀 ~ file: 15对象的浅拷贝.html~ objNew', objNew, hd)
+      console.log('-----------赋值方式2.使用展开语法来赋值-----------')
+      let objAssign = { ...hd }
+      console.log(
+        '🚀 ~ file: 15对象的浅拷贝.html ~ line 35 ~ objAssign',
+        objAssign,
+      )
+      objAssign.name = 'Rain'
+      console.log(objAssign, hd)
     </script>
   </body>
 </html>
