--- a/第十章--对象/18使用构造函数创建对象.html
+++ b/第十章--对象/18使用构造函数创建对象.html
@@ -17,5 +17,12 @@
     let xj = new User('xj')
     console.log('🚀 ~ file: 18使用构造函数创建对象.html ~ line 18 ~ xj', xj)
     xj.show()
+    console.log('可以用构造函数来创建数据，Objec(),String()都是内置构造函数')
+    let b = new Boolean(true)
+    console.log(b.toString())
+    let r = new RegExp('\\d+')
+    console.log(r.valueOf())
+    console.log(r.test('abc'))
+    console.log(r.test('99999'))
   </script>
 </html>
