23不允许向对象添加属性API

--- a/第十章--对象/22灵活的控制属性特征.html
+++ b/第十章--对象/22灵活的控制属性特征.html
@@ -22,7 +22,7 @@
       lesson: {
         value: 'css',
         writable: true,
-        enumerable: false,
+        enumerable: true,
         configurable: false /*加了之后这个属性就不可以被删除了，也不可以被重新配置*/,
       },
       gender: {
