--- a/第十章--对象/25冻结对象的API操作.html
+++ b/第十章--对象/25冻结对象的API操作.html
@@ -8,18 +8,20 @@
   </head>
   <body>
     <div>
-      加了Object.seal(user)之后，Object的所有属性的configurable:
-      false，对象就不能再添加/删除属性了,但是可以改变属性值，因为writable: true
+      Object.freeze(user)冻结之后，"writable": false,"configurable": false
     </div>
+    <div>
+      总结：Object.freeze---"writable": false,"configurable": false
+    </div>
+    <div>Object.seal(user)==========="configurable": false</div>
   </body>
   <script>
     const user = { name: 'ava', url: 'www.baidu.com', mark: 'home' }
-    Object.seal(user)
-    user.name = 'rst'
-    console.log(
-      '加了Object.seal(user)之后，Object的所有属性的configurable: false，对象就不能再添加/删除属性了，',
-      Object.getOwnPropertyDescriptors(user),
-    )
-    console.log('判断对象是不是处于封闭状态', Object.isSealed(user))
+    Object.freeze(user)
+    console.log(JSON.stringify(Object.getOwnPropertyDescriptors(user), null, 2))
+    user.name = '333' /*不能改变属性值了*/
+    console.log(user)
+    delete user.name /*不能删除属性了*/
+    console.log(Object.isFrozen(user))
   </script>
 </html>
