26使用访问器保护数据

--- a/第十章--对象/26使用访问器保护数据.html
+++ b/第十章--对象/26使用访问器保护数据.html
@@ -9,6 +9,6 @@
   <body></body>
   <script>
     'use strict'
-    const hd = { name: 'ava', url: 'www.baidu.com', mark: 'home', age: 19 }
+    const hd = { name: 'ava', url: 'www.baidu.com', mark: 'home', age: 19 } console.log("🚀 ~ file: 26使用访问器保护数据.html ~ line 14 ~ hd", hd)
   </script>
 </html>
