--- a/第十章--对象/29TOKEN的读写处理.html
+++ b/第十章--对象/29TOKEN的读写处理.html
@@ -9,7 +9,20 @@
   <body></body>
   <script>
     'user strict'
-
-
+    //存储token
+    let request = {
+      set token(content) {
+        localStorage.setItem('token', content)
+      },
+      get token() {
+        let token = localStorage.getItem('token')
+        if (!token) {
+          alert('login!')
+        }
+        return token
+      },
+    }
+    request.token = '9999900'
+    console.log(request.token)
   </script>
 </html>
